--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 h1{
-    font-size: 60px;
+    font-size: 110px;
     font-family: "IBM Plex Mono";
     text-align: center;
     color: white;
@@ -14,13 +14,15 @@ p, li{
     color: white;
     
 }
+a{
+    color: white;
+}
 html{
     background-color: black;
 }
 body{
-    width: 600px;
-    margin: 10px auto;
-    
+    width: inherit;
+    margin: 0px auto;
     background-color: brown;
     padding: 0px 20px 20px 20px;
     border: 5px solid white;
