--- a/style.css
+++ b/style.css
@@ -7,12 +7,14 @@ h1{
     padding: 20px auto;
     text-shadow: 3px 3px 1px black;
 }
+hr{
+    width: inherit;
+}
 p, li{
     font-size: 20px;
     line-height: 2;
     letter-spacing: 1px;
     color: white;
-    
 }
 a{
     color: white;
@@ -22,14 +24,21 @@ html{
 }
 body{
     width: inherit;
+    height: 800px;
     margin: 0px auto;
     background-color: brown;
     padding: 0px 20px 20px 20px;
     border: 5px solid white;
 }
-.img {
-    display: block;
-    margin: 0 auto;
-    height: auto;
-    width: 200px;
+img {
+    display: inline-block;
+    height: 200px;
+    width: auto;
+  }
+.mycol{
+      column-count: 2;
+      column-gap: 0px;
+      column-rule: solid;
+      text-align: center;
+      
   }
