--- a/style.css
+++ b/style.css
@@ -30,15 +30,13 @@ body{
     padding: 0px 20px 20px 20px;
     border: 5px solid white;
 }
-img {
-    display: inline-block;
+img[src] {
     height: 200px;
     width: auto;
+    text-align: center;
   }
 .mycol{
       column-count: 2;
       column-gap: 0px;
       column-rule: solid;
-      text-align: center;
-      
   }
