--- a/mystyle.css
+++ b/mystyle.css
@@ -1,55 +1,93 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700&display=swap');
 *{
-    margin: 0em;
-    padding: 0em;
-}
-
-.hero{
-    height: 100vh;
-    background-image: linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.8)), url(background.jpg);
-    background-position: center;
-    background-size: cover;
-    position: relative;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Montserrat',sans-serif;
 }
 nav{
-    display: flex;
-    padding: 3em 4em;
+  background: #151515;
+  padding: 5px 40px;
 }
-.nav-logo img{
-    width: 15em;
+nav ul{
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
-ul{
-    display: inline-block;
-    margin-top: 1em;
-    margin-left: 50em;
+nav ul li{
+  padding: 15px 0;
+  cursor: pointer;
 }
-li{
-    display: inline;
-    padding: 1em;
+nav ul li.items{
+  position: relative;
+  width: auto;
+  margin: 0 16px;
+  text-align: center;
+  order: 3;
 }
-a{
-    text-decoration: none;
-    color: white;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 2em;
+nav ul li.items:after{
+  position: absolute;
+  content: '';
+  left: 0;
+  bottom: 5px;
+  height: 2px;
+  width: 100%;
+  background: #33ffff;
+  opacity: 0;
+  transition: all 0.2s linear;
 }
-
-@media (max-width: 500px){
-    nav{
-        display: flex;
-        padding: 1em 1em;
-    }
-    .nav-logo img{
-        width: 8em;
-    }
-    ul{
-        display: inline-block;
-        margin-top: 0.5em;
-        margin-left: 1em;
-    }
-    a{
-        font-size: 1em;
-    }
-    li{
-        padding: 0.4em;
-    }
+nav ul li.items:hover:after{
+  opacity: 1;
+  bottom: 8px;
+}
+nav ul li.logo{
+  flex: 1;
+  color: white;
+  font-size: 23px;
+  font-weight: 600;
+  cursor: default;
+  user-select: none;
+}
+nav ul li a{
+  color: white;
+  font-size: 18px;
+  text-decoration: none;
+  transition: .4s;
+}
+nav ul li:hover a{
+  color: cyan;
+}
+nav ul li i{
+  font-size: 23px;
+}
+nav ul li.btn{
+  display: none;
+}
+nav ul li.btn.hide i:before{
+  content: '\f00d';
+}
+@media all and (max-width: 900px){
+  nav{
+    padding: 5px 30px;
+  }
+  nav ul li.items{
+    width: 100%;
+    display: none;
+  }
+  nav ul li.items.show{
+    display: block;
+  }
+  nav ul li.btn{
+    display: block;
+  }
+  nav ul li.items:hover{
+    border-radius: 5px;
+    box-shadow: inset 0 0 5px #33ffff,
+                inset 0 0 10px #66ffff;
+  }
+  nav ul li.items:hover:after{
+    opacity: 0;
+  }
 }
