--- a/gridstyle.css
+++ b/gridstyle.css
@@ -2,7 +2,7 @@ html, body{
     background-color: khaki;
     height: 100%;
 }
-.home, .search, .logout{
+.home, .search{
     padding: 10px;
     color: white;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -12,12 +12,11 @@ html, body{
 }
 .home{
     background-color: skyblue;
+    flex: 1;
 }
 .search{
     background-color: orangered;
-}
-.logout{
-    background-color: skyblue;
+    flex: 1;
 }
 .container{
     border: orange 3px solid;
