--- a/style.css
+++ b/style.css
@@ -1,42 +1,44 @@
-h1{
-    font-size: 110px;
-    font-family: "IBM Plex Mono";
-    text-align: center;
-    color: white;
-    margin: 0px;
-    padding: 20px auto;
-    text-shadow: 3px 3px 1px black;
-}
-hr{
-    width: inherit;
-}
-p, li{
-    font-size: 20px;
-    line-height: 2;
-    letter-spacing: 1px;
-    color: white;
-}
-a{
-    color: white;
-}
-html{
-    background-color: black;
+*{
+    margin: 0em;
+    padding: 0em;
+    box-sizing: border-box;
 }
 body{
-    width: inherit;
-    height: 800px;
-    margin: 0px auto;
-    background-color: brown;
-    padding: 0px 20px 20px 20px;
-    border: 5px solid white;
+    background-color: black;
 }
-img[src] {
-    height: 200px;
-    width: auto;
+#headline{
+    color: mediumspringgreen;
+    font-family: IBM Plex Mono;
     text-align: center;
-  }
-.mycol{
-      column-count: 2;
-      column-gap: 0px;
-      column-rule: solid;
-  }
+    font-size: 4em;
+    background-color: rgb(20, 0, 0);
+}
+li{
+    list-style: none;
+    padding: 1em 0em 1em 1em;
+    border: none 2px solid;
+    background-color: rgb(20, 20, 20);
+    
+    text-align: center;
+}
+li:hover{
+    background-color: rgb(43, 43, 43);
+    cursor: pointer;
+}
+a{
+    text-decoration: none;
+    color: lime;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 2em;
+}
+#sidemenu{
+    display: flex;
+    flex-direction: column;
+}
+
+@media all and (max-width:460px){
+    #headline{
+        font-size: 3.5em;
+    }
+
+}
