--- a/style.css
+++ b/style.css
@@ -3,31 +3,28 @@
     padding: 0em;
     box-sizing: border-box;
 }
-body{
-    background-color: black;
-}
 #headline{
     color: mediumspringgreen;
     font-family: IBM Plex Mono;
     text-align: center;
     font-size: 4em;
-    background-color: rgb(20, 0, 0);
+    background-color: rgb(0, 0, 0);
 }
 li{
     list-style: none;
     padding: 1em 0em 1em 1em;
     border: none 2px solid;
-    background-color: rgb(20, 20, 20);
+    background-color: rgb(109, 108, 108);
     
     text-align: center;
 }
 li:hover{
-    background-color: rgb(43, 43, 43);
+    background-color: rgb(36, 36, 36);
     cursor: pointer;
 }
 a{
     text-decoration: none;
-    color: lime;
+    color: yellow;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 2em;
 }
