--- a/style.css
+++ b/style.css
@@ -3,12 +3,16 @@
     padding: 0em;
     box-sizing: border-box;
 }
+
 #headline{
     color: mediumspringgreen;
     font-family: IBM Plex Mono;
     text-align: center;
     font-size: 4em;
     background-color: rgb(0, 0, 0);
+    position: fixed;
+    overflow: hidden;
+    width: 100%;
 }
 li{
     list-style: none;
